@@ -38,7 +38,8 @@ a img {
 <DT>XXXX-XX-XX
 <DD>
 <UL>
-<LI>support for bullets and braces of Coq 8.4
+<LI>support for bullets, braces and <KBD>Grab Existential
+    Variables</KBD> of Coq 8.4
 </LI>
 <LI>incompatible protocol change: requires Proof General &GT; 4.3pre121019
 </LI>
@@ -175,7 +176,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start -->14 Jan 2013
+<!-- hhmts start -->17 Jan 2013
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
